[project]
name = "BlackDeD"
version = "1.0.0"
description = "Advanced Ethical Hacking Toolkit for Security Professionals"
authors = ["BlackDeD Team <blackded@securitytools.com>"]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "scapy>=2.5.0",
    "python-nmap>=0.7.1",
    "paramiko>=3.4.0",
    "cryptography>=41.0.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "pycryptodome>=3.19.0",
    "psutil>=5.9.0",
    "netifaces>=0.11.0",
    "dnspython>=2.4.0",
    "pywifi>=1.1.12",
    "python-whois>=0.8.0",
    "shodan>=1.30.1",
    "rich>=13.7.0",
    "pyfiglet>=1.0.2",
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "python-magic>=0.4.27",
    "pillow>=10.1.0",
    "qrcode>=7.4.2",
    "phonenumbers>=8.13.0"
]
